--- a/symphony/assets/basic.css
+++ b/symphony/assets/basic.css
@@ -2,7 +2,7 @@
 body {
 	background: #fff;
 	color: #222;
-	font: 68.75%/1.5 "Lucida Grande", Verdana, sans-serif;
+	font: 68.75%/1.5 Lucida Grande, Meiryo, Tahoma, Lucida Sans Unicode, sans-serif;
 	cursor: default;
 }
 a {
@@ -24,8 +24,7 @@ h2 {
 	position: relative;
 	margin-bottom: 1em;
 	text-shadow: -1px 2px 3px #ddd;
-	font-weight: normal;
-	font-size: 127.28%;
+	font: 127.28% Lucida Grande, Leelawadee, Lucida Sans Unicode, sans-serif;
 }
 h3,
 h4 {
@@ -39,7 +38,8 @@ ol {
 	margin: 0 0 1.5em 2.25em;
 }
 code {
-	font: 11px Monaco, Courier, monospace;
+	font: 106%/1.5 Monaco, Consolas, Andale Mono, Lucida Console, monospace;
+	font-size-adjust: 0.5;
 }
 i,
 var {
