--- a/symphony/assets/debug.css
+++ b/symphony/assets/debug.css
@@ -57,6 +57,8 @@ code {
 	position: relative;
 	margin-left: 3.6em;
 	padding: 0.3em 0 0.3em 0.7em;
+}
+code > span {
 	white-space: pre;
 	white-space: pre-wrap;
 }
