Temporarily removed error highlighting due to bugginess

--- a/symphony/assets/debug.css
+++ b/symphony/assets/debug.css
@@ -57,8 +57,6 @@ code {
 	position: relative;
 	margin-left: 3.6em;
 	padding: 0.3em 0 0.3em 0.7em;
-}
-code > span {
 	white-space: pre;
 	white-space: pre-wrap;
 }
@@ -135,10 +133,14 @@ span.comment,
 span.comment * {
 	color: #727270;
 }
+
+/*
+@Rowan: Your highlighter has bugs! :P <!-->-->
 span.error {
 	background-color: #892005;
 	color: #fff;
 }
+*/
 
 /* Generic Elements */
 body {
