--- a/symphony/assets/forms.css
+++ b/symphony/assets/forms.css
@@ -339,6 +339,9 @@ ul.tags .more:hover {
 #utilities li:first-child {
 	border-top: none;
 }
+#utilities li:nth-child(odd) {
+	background-color: #f5f5f4;
+}
 #components {
 	padding-bottom: 58px;
 }
