--- a/symphony/assets/debug.css
+++ b/symphony/assets/debug.css
@@ -67,7 +67,7 @@ code > span {
 dl,
 code,
 ol li {
-	font: 11px/1.5 Monaco, Consolas, Andale Mono, Lucida Console, monospace;
+	font: 11px/1.5 Monaco, Consolas, Andale Mono, monospace;
 }
 dl {
 	position: relative;
