--- a/symphony/assets/error.css
+++ b/symphony/assets/error.css
@@ -52,7 +52,7 @@
 	margin-bottom: 1.25em;
 	border: 1px solid #887;
 	background-color: #f5f5f3;
-	font: 115%/1.5 Monaco, Consolas, Andale Mono, Lucida Console, monospace;
+	font: 115%/1.5 Monaco, Consolas, Andale Mono, monospace;
 	font-size-adjust: 0.5;
 }
 #details dt {
