--- a/symphony/assets/forms.css
+++ b/symphony/assets/forms.css
@@ -459,7 +459,7 @@ ul.tags .more:hover {
 
 /* Text Editor */
 .code {
-	font: 115%/1.5 Monaco, Consolas, Andale Mono, Lucida Console, monospace;
+	font: 115%/1.5 Monaco, Consolas, Andale Mono, monospace;
 	font-size-adjust: 0.5;
 }
 .editor.button {
