--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -177,9 +177,9 @@ html.active #nav a:hover {
 #notice {
 	position: relative;
 	z-index: 2;
-	margin: 5.5em -19px -5.5em;
+	margin: 0 -19px -5.5em;
 	border-bottom: 1px solid #887;
-	padding: 0 0.83em;
+	padding: 5.5em 0.83em 0;
 	background-color: #7f7f72;
 	color: #e1e1d6;
 	font-size: 90.91%;
