--- a/symphony/assets/tables.css
+++ b/symphony/assets/tables.css
@@ -23,9 +23,23 @@ th:first-child,
 td:first-child {
 	padding-left: 19px;
 }
-/* Until CSS3 widely supported, tr:nth-child(odd) td */
-tr.odd td {
+tr.odd td,
+tr:nth-child(odd) td {
 	background-color: #f5f5f4;
+}
+tr.selected td {
+	border-color: #617dc5;
+	background-color: #5273c0;
+}
+tr.selected.odd td,
+tr.selected:nth-child(odd) td {
+	background-color: #5677c3;
+}
+tr.movable td,
+tr.movable.odd td,
+tr.movable:nth-child(odd) td {
+	border-color: #998;
+	background-color: #887;
 }
 tbody a {
 	padding: 0.67em 0;
