--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -216,8 +216,7 @@ h1 a:hover,
 
 /* Code */
 code {
-	font: 115%/1.5 Monaco, Consolas, Andale Mono, monospace;
-	font-size-adjust: 0.5;
+	font: 134%/1.3 monospace;
 }
 pre {
 	position: relative;
