--- a/symphony/assets/forms.css
+++ b/symphony/assets/forms.css
@@ -365,6 +365,8 @@ ul.tags .more:hover {
 #utilities {
 	margin: 2px 0 1.5em 0;
 	border: 1px solid #bba;
+	max-height: 510px;
+	overflow: auto;
 	list-style: none;
 }
 #utilities li {
@@ -428,9 +430,6 @@ ul.tags .more:hover {
 .file em:hover {
 	color: #d43;
 }
-
-/* Text Editor */
 .code {
-	font: 115%/1.5 Monaco, Consolas, Andale Mono, monospace;
-	font-size-adjust: 0.5;
+	font: 134%/1.3 monospace;
 }
