--- a/symphony/assets/debug.css
+++ b/symphony/assets/debug.css
@@ -67,7 +67,7 @@ code > span {
 dl,
 code,
 ol li {
-	font: 12px/16px monospace;
+	font: 11px/16px Monaco, Consolas, 'Andale Mono', monospace;
 }
 dl {
 	position: relative;
